# nixos-installer

./: .hlint.yaml  flake.nix  nixos-install.cabal  treefmt.toml
src/: Config.hs  Main.hs
